--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,42 @@
+backcall==0.2.0
 certifi==2021.10.8
 charset-normalizer==2.0.8
 click==8.0.3
+decorator==5.1.0
+Flask==2.0.2
 idna==3.3
+ipython==7.30.0
+itsdangerous==2.0.1
+jedi==0.18.1
+Jinja2==3.0.3
 joblib==1.1.0
+lxml==4.6.4
+MarkupSafe==2.0.1
+matplotlib-inline==0.1.3
+multitasking==0.0.10
 nltk==3.6.5
+numpy==1.21.4
 oauthlib==3.1.1
+pandas==1.3.4
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.23
+ptyprocess==0.7.0
 py4j==0.10.9.2
+Pygments==2.10.0
 pyspark==3.2.0
+python-dateutil==2.8.2
+pytz==2021.3
 regex==2021.11.10
 requests==2.26.0
 requests-oauthlib==1.3.0
+six==1.16.0
 textblob==0.17.1
 tqdm==4.62.3
+traitlets==5.1.1
 tweepy==4.4.0
 urllib3==1.26.7
+wcwidth==0.2.5
+Werkzeug==2.0.2
+yfinance==0.1.67
